fix: update grid gap variable and dependencies in package-lock [WTEL-7215](https://webitel.atlassian.net/browse/WTEL-7215)

--- a/src/app/css/objects/objects.scss
+++ b/src/app/css/objects/objects.scss
@@ -108,7 +108,7 @@
   align-items: flex-start;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: minmax(auto, auto);
-  gap: var(--spacing-sm);
+  gap: var(--content-wrapper-gap);
 }
 
 .grid-w100 {
